--- a/LoARe.html
+++ b/LoARe.html
@@ -14,9 +14,9 @@
                
             </div>
             <div class="social-icons">
-                <img src="/Air/img/fb.png">
-                <img src="/Air/img/gp.png">
-                <img src="/Air/img/tw.png">
+                <img src="img/fb.png">
+                <img src="img/gp.png">
+                <img src="img/tw.png">
             </div>
             <form id="register" class="input-group">
                 <input type="text" class="input-field" placeholder="User ID" required>
