--- a/infocustomers.html
+++ b/infocustomers.html
@@ -99,8 +99,7 @@
 
                 <div class="box-template">
                     <div class="box-template-title">
-                        <div class="box-template-title-cont fa-suitcase"> <img src="img/hanhlyicon.jpg"
-                                alt="Baggage Information" style="margin: 0px 0px -4px;"> Baggage Information</div>
+                        <div class="box-template-title-cont fa-suitcase"> Baggage Information</div>
                     </div>
                     <div class="box-template-content">
 
@@ -563,7 +562,6 @@
                                     <option value="198">Somalia</option>
                                     <option value="199">South Africa</option>
                                     <option value="200">South Georgia</option>
-
                                     <option value="201">Spain</option>
                                     <option value="202">Sri Lanka</option>
                                     <option value="184">St Pierre &amp; Miquelon</option>
@@ -600,7 +598,6 @@
                                     <option value="231">Vanuatu</option>
                                     <option value="232">Vatican City</option>
                                     <option value="233">Venezuela</option>
-
                                     <option value="235">Virgin Island Britis</option>
                                     <option value="236">Virgin Islands US</option>
                                     <option value="237">Wallis and Futuna</option>
