--- a/qlDonHang.html
+++ b/qlDonHang.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app-header header-shadow" style="background-color:rgb(54, 50, 50);">
         <div class="app-header__logo">
-            <img src="/Air/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
         </div>
         <div class="app-header__menu">
             <span>
