--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!--
 
-Template 2093 Flight
-
-http://www.tooplate.com/view/2093-flight
-
--->
     <title>Flight - Contact Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -128,12 +122,6 @@ http://www.tooplate.com/view/2093-flight
             <div class="row">
                 <div class="col-md-12">
                     <div id="map">
-                        <!-- How to change your own map point
-            1. Go to Google Maps
-            2. Click on your location point
-            3. Click "Share" and choose "Embed map" tab
-            4. Copy only URL and paste it within the src="" field below
-        -->
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.485196115994!2d103.85995441789784!3d1.2880401763270322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7fb4e58ad9cd826e!2sSingapore+Flyer!5e0!3m2!1sen!2sth!4v1505825620371"
                             width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
@@ -154,7 +142,7 @@ http://www.tooplate.com/view/2093-flight
                 </div>
                 <div class="col-md-12">
                     <ul class="social-icons">
-                        <li><a href="https://www.facebook.com/tooplate"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss"></i></a></li>
